Mention scollaping loss

--- a/subFFT.ipynb
+++ b/subFFT.ipynb
@@ -353,7 +353,9 @@
     "\n",
     "In green is the DFT of the resampled signal. It is exactly the same as the DFT of the sampled signal (orange), but with zeros in the extra frequency bins. Essentially, resampling does not help increase frequency resolution of DFT. No new information is added.\n",
     "\n",
-    "In red is the DFT of the same signal with the same duration but highly oversampled. Again there is no increase in the frequency resolution because the signal duration is similarly short. It still has a broad peak and agrees with the original signal (orange) near the low frequencies, but starts to differ at the higher frequencies. "
+    "In red is the DFT of the same signal with the same duration but highly oversampled. Again there is no increase in the frequency resolution because the signal duration is similarly short. It still has a broad peak and agrees with the original signal (orange) near the low frequencies, but starts to differ at the higher frequencies. \n",
+    "\n",
+    "In purple is the fine scan of DFT. Note that the peak is always correct. But our FFT points may not always land on the peak. The case shown here is near maximum scalloping loss"
    ]
   },
   {
